force-app/main/default/objects/Case/fields/SlaStartDateHandling__c.field-meta.xml
<CustomField>
    <fullName>SlaStartDateHandling__c</fullName>
    <label>Data/Hora de Início SLA</label>
    <type>DateTime</type>
</CustomField>