force-app/main/default/objects/Case/fields/SlaStatus__c.field-meta.xml
<CustomField>
    <fullName>SlaStatus__c</fullName>
    <formula>IF (TEXT(SlaAlert__c) = &apos;No Prazo&apos;, IMAGE (&quot;/resource/GreenLight&quot;, &apos;No Prazo&apos; , 20,20), 
				IF(TEXT(SlaAlert__c) = &apos;24 Horas Finais&apos;,  IMAGE (&quot;/resource/YellowLight&quot;, &apos;24 Horas Finais&apos;, 20,20),
							IF (TEXT(SlaAlert__c) = &apos;Fora do Prazo&apos;,  IMAGE (&quot;/resource/RedLight&quot;, &apos;Fora do Prazo&apos;, 20,20), 
											&apos;&apos;)))</formula>
    <inlineHelpText>Alerta &quot;No Prazo&quot; = Verde, &quot;24 Horas Finais&quot; = Amarelo, &quot;Fora do Prazo&quot; = Vermelho.</inlineHelpText>
    <label>Status SLA</label>
    <type>Text</type>
</CustomField>