force-app/main/default/objects/Case/fields/startDateWindow__c.field-meta.xml
<CustomField>
    <fullName>startDateWindow__c</fullName>
    <label>Data Inicio da Janela</label>
    <type>DateTime</type>
</CustomField>