force-app/main/default/objects/Case/fields/StatusColor__c.field-meta.xml
<CustomField>
    <fullName>StatusColor__c</fullName>
    <formula>CASE(text(Status),
					&quot;A iniciar&quot;, IMAGE(&quot;/resource/HDEGreenDot&quot;, &quot;Green&quot;),
				 &quot;Aguardando&quot;, IMAGE(&quot;/resource/HDEGrayDot&quot;, &quot;Gray&quot;),
				 &quot;Em Andamento&quot;, IMAGE(&quot;/resource/HDEYellowDot&quot;, &quot;Yellow&quot;),
				 &quot;Atenção&quot;, IMAGE(&quot;/resource/HDERedDot&quot;, &quot;Red&quot;),
				 &quot;Crítico&quot;, IMAGE(&quot;/resource/HDEBlackDot&quot;, &quot;Black&quot;),
				 &quot;Closed&quot;, IMAGE(&quot;/img/msg_icons/confirm24.png&quot;, &quot;Check&quot;),&quot;&quot;)</formula>
    <label>Tratamento</label>
    <type>Text</type>
</CustomField>