force-app/main/default/objects/Case/fields/StatusOmniChannel__c.field-meta.xml
<CustomField>
    <fullName>StatusOmniChannel__c</fullName>
    <description>Campo que reflete o status que é apresentado no App VIVO para o cliente baseado no status do Caso conforme fórmula configurada, status usado para casos de minhas solicitações.</description>
    <formula>CASE(TEXT(Status), 
					&apos;New&apos;,&apos;Em andamento&apos;,
					&apos;Atenção&apos;,&apos;Em andamento&apos;,
					&apos;Escalated&apos;,&apos;Em andamento&apos;,
					&apos;Crítico&apos;,&apos;Em andamento&apos;,
					&apos;Closed&apos;,&apos;Concluída&apos;,
					&apos;Em fila&apos;,&apos;Em andamento&apos;,
					&apos;Em execução&apos;,&apos;Em andamento&apos;,
					&apos;Aguardando Informação&apos;,&apos;Aguardando sua resposta&apos;,
					&apos;Expirado&apos;,&apos;Expirada&apos;,
					&apos;Cancelamento solicitado&apos;,&apos;Em andamento&apos;,
					&apos;Cancelado&apos;,&apos;Cancelada&apos;,&apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Status apresentado no App VIVO para o cliente.</inlineHelpText>
    <label>Status Canal Digital</label>
    <type>Text</type>
</CustomField>