force-app/main/default/objects/Case/fields/SubDetailService__c.field-meta.xml
<CustomField>
    <fullName>SubDetailService__c</fullName>
    <label>Subdetalhe</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CloseDetail__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2.Com contato - Solicitação não atendida</fullName>
            </value>
            <value>
                <fullName>2.Com contato - Solicitação resolvida</fullName>
            </value>
            <value>
                <fullName>2.Sem contato - Solicitação não atendida</fullName>
            </value>
            <value>
                <fullName>2.Sem contato - Solicitação resolvida</fullName>
            </value>
            <value>
                <fullName>2.Solicitação não atendida</fullName>
            </value>
            <value>
                <fullName>2.Solicitação resolvida</fullName>
            </value>
            <value>
                <fullName>3.1.Com contato - Solicitação não atendida</fullName>
            </value>
            <value>
                <fullName>3.1.Com contato - Solicitação resolvida Alçada</fullName>
            </value>
            <value>
                <fullName>3.1.Com contato - Solicitação resolvida Processo</fullName>
            </value>
            <value>
                <fullName>3.1.Sem contato - Causa raiz tratada pelo Guardião</fullName>
            </value>
            <value>
                <fullName>3.1.Sem contato - Causa raiz tratada pelo Op.</fullName>
            </value>
            <value>
                <fullName>3.1.Sem contato - Solicitação não atendida</fullName>
            </value>
            <value>
                <fullName>3.1.Sem contato - Solicitação resolvida</fullName>
            </value>
            <value>
                <fullName>3.1.Solicitação não atendida</fullName>
            </value>
            <value>
                <fullName>3.1.Solicitação resolvida</fullName>
            </value>
            <value>
                <fullName>3.2.Com contato - Solicitação não atendida</fullName>
            </value>
            <value>
                <fullName>3.2.Com contato - Solicitação resolvida Alçada</fullName>
            </value>
            <value>
                <fullName>3.2.Com contato - Solicitação resolvida Processo</fullName>
            </value>
            <value>
                <fullName>3.2.Sem contato - Solicitação não atendida</fullName>
            </value>
            <value>
                <fullName>3.2.Sem contato - Solicitação resolvida</fullName>
            </value>
            <value>
                <fullName>4.Tratado em outro HDE</fullName>
            </value>
            <value>
                <fullName>Com contato - Solicitação não atendida</fullName>
            </value>
            <value>
                <fullName>Com contato - Solicitação resolvida</fullName>
            </value>
            <value>
                <fullName>Com contato - Solicitação resolvida Alçada</fullName>
            </value>
            <value>
                <fullName>Com contato - Solicitação resolvida Processo</fullName>
            </value>
            <value>
                <fullName>Sem Contato - solicitação não atendida</fullName>
            </value>
            <value>
                <fullName>Sem contato - Causa raiz tratada pelo Guardião</fullName>
            </value>
            <value>
                <fullName>Sem contato - Causa raiz tratada pelo Op.</fullName>
            </value>
            <value>
                <fullName>Sem contato - Solicitação resolvida</fullName>
            </value>
            <value>
                <fullName>Solicitação não atendida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>