force-app/main/default/objects/Case/fields/SystemName__c.field-meta.xml
<CustomField>
    <fullName>SystemName__c</fullName>
    <description>Para uso do HDE, deve ser preenchido com o nome do sistema da tratativa</description>
    <inlineHelpText>Você pode preencher esse campo para inserir o Nome do Sistema de Tratativa</inlineHelpText>
    <label>Nome do Sistema</label>
    <length>255</length>
    <type>Text</type>
</CustomField>