force-app/main/default/objects/Case/fields/TicketNumber__c.field-meta.xml
<CustomField>
    <fullName>TicketNumber__c</fullName>
    <label>Num Bilhete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>