force-app/main/default/objects/Case/fields/TimeElapsedOfService__c.field-meta.xml
<CustomField>
    <fullName>TimeElapsedOfService__c</fullName>
    <formula>IF( 
				NOT(ISBLANK(ClosedDate)),

TEXT(FLOOR( ((ClosedDate - CreatedDate)*1440) / 1440)) &amp;&apos;Dias&apos;&amp; 

TEXT( FLOOR( MOD(((ClosedDate - CreatedDate)*1440),1440 )  / 60)) &amp;&apos;Hr&apos;&amp; 
 
TEXT(FLOOR(MOD( MOD(((ClosedDate - CreatedDate)*1440),1440),60)))&amp;&apos;Min&apos;,
								
								&apos;-&apos;)</formula>
    <label>Tempo Decorrido Atendimento</label>
    <type>Text</type>
</CustomField>