force-app/main/default/objects/Case/fields/TimeToSLA__c.field-meta.xml
<CustomField>
    <fullName>TimeToSLA__c</fullName>
    <formula>IF(MFLOOR((DueDate__c - now())*24) &gt; 0, text(MFLOOR((DueDate__c - now())*24)), &quot;-&quot; + TEXT(ABS(MCEILING((DueDate__c - now())*24))))  + &quot; Hora(s) e &quot; +

Text(Round(VALUE(Right(TEXT(Round((DueDate__c - now())*24,2)),2))*0.6,0)) + &quot; Minuto(s)&quot;</formula>
    <label>Tempo para SLA</label>
    <type>Text</type>
</CustomField>