force-app/main/default/objects/Case/fields/TransferObservation__c.field-meta.xml
<CustomField>
    <fullName>TransferObservation__c</fullName>
    <label>Observação da Transferência</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>