force-app/main/default/objects/Case/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>Usuário</label>
    <length>255</length>
    <type>Text</type>
</CustomField>