force-app/main/default/objects/Case/fields/Validity__c.field-meta.xml
<CustomField>
    <fullName>Validity__c</fullName>
    <description>Validade atribuída ao ajuste de saldo</description>
    <label>Validade (em dias)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>