force-app/main/default/objects/Case/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Valor atribuído ao ajuste de saldo</description>
    <label>Valor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>