force-app/main/default/objects/Case/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <formula>CASE( RecordType.DeveloperName+text(Segment__c),
&quot;EmailTriggerVivo V&quot;, &quot;CRI E-mail V&quot;,
&quot;GoldProcessesEscalationGold&quot;, &quot;CRI Escalonamento Gold&quot;,
&quot;PurpuraProcessesEscalationPúrpura&quot;, &quot;CRI Escalonamento Púrpura&quot;,	
&quot;SilverProcessesEscalationSilver&quot;, &quot;CRI Escalonamento Silver&quot;,					
&quot;StoreProcessesEscalationLoja&quot;, &quot;CRI Escalonamento Loja&quot;,
&quot;ResellerStoreProcessesEscalationLojas (Revendas)&quot;, &quot;CRI Escalonamento Lojas (Revendas)&quot;,					
&quot;PlatinumProcessesEscalationPlatinum&quot;, &quot;CRI Escalonamento Platinum&quot;,
&quot;PrimeProcessesEscalationPrime&quot;, &quot;CRI Escalonamento Prime&quot;,
&quot;OuvidoriaProcessesEscalationOuvidoria&quot;, &quot;CRI Escalonamento Ouvidoria&quot;,
&quot;CommunityOuvidoriaProcessesEscalationOuvidoria Comunidades&quot;, &quot;CRI Escalonamento Ouvidoria Comunidades&quot;,					
&quot;VivoVProcessesEscalationVivo V&quot;, &quot;CRI Escalonamento V&quot;,
&quot;CallSupervisorVivo V&quot;, &quot;CRI Supervisor V&quot;,
&quot;EscalationAndLawSuitsVivo V&quot;, &quot;CRI Escalonamento V&quot;,
&quot;EscalationAndLawSuitsGold&quot;, &quot;CRI Escalonamento Gold&quot;,
&quot;EscalationAndLawSuitsPlatinum&quot;, &quot;CRI Escalonamento Platinum&quot;,
&quot;EscalationAndLawSuitsLoja&quot;, &quot;CRI Escalonamento Loja&quot;,
&quot;EscalationAndLawSuitsPrime&quot;, &quot;CRI Escalonamento Prime&quot;,
&quot;EscalationAndLawSuitsOuvidoria&quot;, &quot;CRI Escalonamento Ouvidoria&quot;,

&quot;&quot;
)</formula>
    <label>Visão</label>
    <type>Text</type>
</CustomField>