force-app/main/default/objects/Case/fields/whatslly__Created_by_Whatslly__c.field-meta.xml
<CustomField>
    <fullName>whatslly__Created_by_Whatslly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created by Whatslly</label>
    <type>Checkbox</type>
</CustomField>