force-app/main/default/objects/Case/recordTypes/CallDroped.recordType-meta.xml
<RecordType>
    <fullName>CallDroped</fullName>
    <active>true</active>
    <businessProcess>CTIService</businessProcess>
    <label>Ligação Caiu</label>
</RecordType>