force-app/main/default/objects/Case/recordTypes/CallSupervisor.recordType-meta.xml
<RecordType>
    <fullName>CallSupervisor</fullName>
    <active>true</active>
    <businessProcess>HDE</businessProcess>
    <description>Chamado gestão de casos de tratativas exclusivas via e-mail (exclusivo grupo de atendimento V</description>
    <label>HDE - Acionamento Supervisor</label>
</RecordType>