force-app/main/default/objects/Case/recordTypes/CasePortability.recordType-meta.xml
<RecordType>
    <fullName>CasePortability</fullName>
    <active>true</active>
    <businessProcess>Case Process</businessProcess>
    <label>Caso Portabilidade</label>
</RecordType>