force-app/main/default/objects/Case/recordTypes/CaseProcess.recordType-meta.xml
<RecordType>
    <fullName>CaseProcess</fullName>
    <active>true</active>
    <businessProcess>Case Process</businessProcess>
    <label>Caso Processo</label>
</RecordType>