force-app/main/default/objects/Case/recordTypes/CommunityOuvidoriaProcessesEscalation.recordType-meta.xml
<RecordType>
    <fullName>CommunityOuvidoriaProcessesEscalation</fullName>
    <active>true</active>
    <businessProcess>HDE</businessProcess>
    <description>Chamado gestão de casos para solução de Causa Raiz, Escalonamento, Acompanhamento e Gestão expectativa Cliente</description>
    <label>HDE - Ouvidoria Comunidades Processos e Escalonamento</label>
</RecordType>