force-app/main/default/objects/Case/recordTypes/CTIService.recordType-meta.xml
<RecordType>
    <fullName>CTIService</fullName>
    <active>true</active>
    <businessProcess>CTIService</businessProcess>
    <description>Caso para registo de atendimentos originados no CTI (WDE).</description>
    <label>Atendimento CTI</label>
</RecordType>