force-app/main/default/objects/Case/recordTypes/DisputeInvoiceCase.recordType-meta.xml
<RecordType>
    <fullName>DisputeInvoiceCase</fullName>
    <active>true</active>
    <businessProcess>DisputeInvoiceCase</businessProcess>
    <description>Tipo de registro específico para os Casos gerados através do Fluxo de Contestação de Faturas.</description>
    <label>Contestação de Fatura</label>
</RecordType>