force-app/main/default/objects/Case/recordTypes/EmailTrigger.recordType-meta.xml
<RecordType>
    <fullName>EmailTrigger</fullName>
    <active>true</active>
    <businessProcess>HDE</businessProcess>
    <description>Chamado gestão de casos de tratativas exclusivas via e-mail (exclusivo grupo de atendimento V</description>
    <label>HDE - Acionamento E-mail</label>
</RecordType>