force-app/main/default/objects/Case/recordTypes/FixedServiceQualification.recordType-meta.xml
<RecordType>
    <fullName>FixedServiceQualification</fullName>
    <active>true</active>
    <businessProcess>FixedServiceQualification</businessProcess>
    <label>Palitagem de Atendimento Fixa</label>
</RecordType>