force-app/main/default/objects/Case/recordTypes/Helpwithbilling.recordType-meta.xml
<RecordType>
    <fullName>Helpwithbilling</fullName>
    <active>true</active>
    <businessProcess>Minhas Solicitações</businessProcess>
    <description>Caso pertencente ao fluxo de Minhas Solicitações para realizar o atendimento das solicitações abertas pelos clientes através de Canais Digitais, como exemplo o App Vivo.</description>
    <label>Ajuda com Cobrança</label>
</RecordType>