force-app/main/default/objects/Case/recordTypes/MobileServiceQualification.recordType-meta.xml
<RecordType>
    <fullName>MobileServiceQualification</fullName>
    <active>true</active>
    <businessProcess>MobileServiceQualification</businessProcess>
    <description>Tipo de registro para palitagem de Atendimento Móvel.</description>
    <label>Palitagem de Atendimento Móvel</label>
</RecordType>