force-app/main/default/objects/Case/recordTypes/Portability_Ticket.recordType-meta.xml
<RecordType>
    <fullName>Portability_Ticket</fullName>
    <active>true</active>
    <businessProcess>vlocity_cmt__Vlocity Support Process</businessProcess>
    <description>Tipo de registro criado para jornadas 29 e 57 - Portabilidade</description>
    <label>Bilhete de Portabilidade</label>
</RecordType>
 