force-app/main/default/objects/Case/recordTypes/PreCaseDispute.recordType-meta.xml
<RecordType>
    <fullName>PreCaseDispute</fullName>
    <active>true</active>
    <businessProcess>PreCaseDispute</businessProcess>
    <description>Tipo de registro específico para os Casos de Contestação do Produto Pre</description>
    <label>Palitagem de Atendimento Pre Caso Contestação</label>
</RecordType>