force-app/main/default/objects/Case/recordTypes/PreCaseReimbursement.recordType-meta.xml
<RecordType>
    <fullName>PreCaseReimbursement</fullName>
    <active>true</active>
    <businessProcess>PreCaseReimbursement</businessProcess>
    <label>Palitagem de Atendimento Pre Caso Ressarcimento</label>
</RecordType>