force-app/main/default/objects/Case/recordTypes/PreCaseUnproductive.recordType-meta.xml
<RecordType>
    <fullName>PreCaseUnproductive</fullName>
    <active>true</active>
    <businessProcess>PreCaseUnproductive</businessProcess>
    <label>Palitagem de Atendimento Pre Caso Improdutivo</label>
</RecordType>