force-app/main/default/objects/Case/recordTypes/ProblemWithPortability.recordType-meta.xml
<RecordType>
    <fullName>ProblemWithPortability</fullName>
    <active>true</active>
    <businessProcess>Minhas Solicitações</businessProcess>
    <description>Caso pertencente ao fluxo de Minhas Solicitações para realizar o atendimento das solicitações abertas pelos clientes através de Canais Digitais, como exemplo o App Vivo.</description>
    <label>Problema com Portabilidade</label>
</RecordType>