force-app/main/default/objects/Case/recordTypes/PurpuraProcessesEscalation.recordType-meta.xml
<RecordType>
    <fullName>PurpuraProcessesEscalation</fullName>
    <active>true</active>
    <businessProcess>HDE</businessProcess>
    <description>Chamado gestão de casos para solução de Causa Raiz, Escalonamento, Acompanhamento e Gestão expectativa Cliente</description>
    <label>HDE - Púrpura - Processos e Escalonamento</label>
</RecordType>