force-app/main/default/objects/Case/recordTypes/SilverProcessesEscalation.recordType-meta.xml
<RecordType>
    <fullName>SilverProcessesEscalation</fullName>
    <active>true</active>
    <businessProcess>HDE</businessProcess>
    <description>Chamado gestão de casos para solução de Causa Raiz, Escalonamento, Acompanhamento e Gestão expectativa Cliente</description>
    <label>HDE - Silver - Processos e Escalonamento</label>
</RecordType>