force-app/main/default/objects/Case/recordTypes/StoreServiceManagerRecordType.recordType-meta.xml
<RecordType>
    <fullName>StoreServiceManagerRecordType</fullName>
    <active>true</active>
    <businessProcess>StoreServiceManagerProcessSupport</businessProcess>
    <description>Tipo de registro gerenciamento de atendimento de lojas</description>
    <label>Gerenciamento de Atendimento Lojas</label>
</RecordType>