force-app/main/default/objects/Case/recordTypes/TechnicalMonitoring.recordType-meta.xml
<RecordType>
    <fullName>TechnicalMonitoring</fullName>
    <active>true</active>
    <businessProcess>HDE</businessProcess>
    <description>Formulário em teste, não utilizar</description>
    <label>HDE - Acompanhamento Técnico</label>
</RecordType>