force-app/main/default/objects/Case/recordTypes/vlocity_cmt__Billing.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__Billing</fullName>
    <active>true</active>
    <businessProcess>vlocity_cmt__Billing</businessProcess>
    <description>Billing complaint.</description>
    <label>Billing</label>
</RecordType>