force-app/main/default/objects/Case/recordTypes/WalletProcessesEscalation.recordType-meta.xml
<RecordType>
    <fullName>WalletProcessesEscalation</fullName>
    <active>true</active>
    <businessProcess>HDE</businessProcess>
    <description>Chamado gestão de casos para solução de Causa Raiz, Escalonamento, Acompanhamento e Gestão expectativa Cliente</description>
    <label>HDE - Carteira Processos Escalonamento</label>
</RecordType>