force-app/main/default/objects/Case/validationRules/CaseOwnerHasChanged.validationRule-meta.xml
<ValidationRule>
    <fullName>CaseOwnerHasChanged</fullName>
    <active>true</active>
    <description>[Bloco 9] Jornada 9 - Abertura e Tratativa de Casos | Validação para impedir alteração manual do &quot;Proprietário do Caso&quot; para os Casos de &quot;Portabilidade&quot; ou &quot;Caso/Processo&quot;.</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    OR($RecordType.Name = &quot;Caso Processo&quot;, $RecordType.Name = &quot;Caso Portabilidade&quot;),
    ISCHANGED(OwnerId),
				HasStatusChange__c = TRUE
				)</errorConditionFormula>
    <errorMessage>Não é permitido a ação desse botão. Acesse o caso desejado para alterar o Proprietário.</errorMessage>
</ValidationRule>