force-app/main/default/objects/Case/validationRules/ChangeFieldsWhenStatusNotEqualToClosed.validationRule-meta.xml
<ValidationRule>
    <fullName>ChangeFieldsWhenStatusNotEqualToClosed</fullName>
    <active>true</active>
    <description>[B9-J9] Abertura e Tratativa de Casos | Campos &quot;Prioridade&quot; e &quot;Número da Ordem&quot; somente poderão ser alterados quando Status for diferente de &quot;Fechado&quot; para os Layouts de Portabilidade e Caso/Processo [Fernanda Faria]</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
				OR($RecordType.Name = &quot;Caso Processo&quot;, $RecordType.Name = &quot;Caso Portabilidade&quot;),
    OR(ISCHANGED(Priority), ISCHANGED(OrderNumber__c)),
				OR(TEXT(Status) = &quot;Closed&quot;, TEXT(Status) = &quot;Fechado&quot;)
						 
   )</errorConditionFormula>
    <errorMessage>Não é possível alterar &quot;Prioridade&quot; ou &quot;Número da Ordem&quot; quando o Caso estiver Fechado.</errorMessage>
</ValidationRule>