force-app/main/default/objects/Case/validationRules/ChangeOrderNumberValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ChangeOrderNumberValidation</fullName>
    <active>true</active>
    <description>[B9-J9] Abertura e Tratativa de Casos | Validação para alteração de número da ordem [Fernanda Faria]</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    OR($RecordType.Name = &quot;Caso Processo&quot;, $RecordType.Name = &quot;Caso Portabilidade&quot;),
    NOT(ISBLANK(PRIORVALUE(OrderNumber__c))),
        ISCHANGED(OrderNumber__c)

   )</errorConditionFormula>
    <errorDisplayField>OrderNumber__c</errorDisplayField>
    <errorMessage>Não é possível alterar o Número da Ordem.</errorMessage>
</ValidationRule>