force-app/main/default/objects/Case/validationRules/ChangePriorityValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ChangePriorityValidation</fullName>
    <active>true</active>
    <description>[B9-J9] Abertura e Tratativa de Casos | Campo Prioridade somente poderá ser alterado pelo Proprietário do Caso para os Layouts de Portabilidade e Caso/Processo [Fernanda Faria]</description>
    <errorConditionFormula>AND(
				NOT(ISNEW()),
				OR($RecordType.Name = &quot;Caso Processo&quot;, $RecordType.Name = &quot;Caso Portabilidade&quot;),
				ISCHANGED(Priority),
				$User.Id &lt;&gt; OwnerId
				
				)</errorConditionFormula>
    <errorDisplayField>Priority</errorDisplayField>
    <errorMessage>Somente é permitido alteração de Prioridade pelo Proprietário do Caso.</errorMessage>
</ValidationRule>